--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     window.location.href = "https://https://t.me/+avV8vpMfkOJmZDhl";}
 </script>
 
-<iframe src="https://tv.tflix.app/live/cpl-t20-2024/" allowfullscreen></iframe>
+<iframe src="https://tplex.live/cn1/?c=willowusa" allowfullscreen></iframe>
 
 </body>
 </html>
